# spm

./: LICENSE  Makefile  Makefile.am  README.md  TODO  ask_for_locker.c  ask_for_locker.h  battery_monitor.c  battery_monitor.h  config.h.in  configure.ac  format.h  get_time.c  get_time.h  gui.c  gui.h  logger.c  logger.h  main.c  meson.build  meson_options.txt  power.c  power.h  power_options.c  power_options.h  run_locker.c  run_locker.h  spm.c  spm.h  util.c  util.h
